package bt_java.baitap_ca5;

public interface ATMListener {
    boolean kiemTraSoDu(int soTien);
    void nhanThongBao(int soTien, boolean thanhCong);
}
